welcome.lessons.welcome.bat.bool1.Close10.scala.error
close10:2: error: illegal start of simple pattern
	var:Int c=0
           ^close10:3: error: '=' expected but ';' found.
	if ( Math.abs(10-a) < Math.abs(10-b) ) {
^