welcome.lessons.welcome.bat.bool1.Close10.scala.code
def close10(a:Int, b:Int): Int = {
	var:Int c=0
	if ( Math.abs(10-a) < Math.abs(10-b) ) {
		return a}

	if ( Math.abs(10-a) > Math.abs(10-b) ) {
		return b}
	if (Math.abs(10-a) == Math.abs(10-b) ) {
		return c}	
	}

